Alterado idioma de menu

--- a/source/index.html
+++ b/source/index.html
@@ -12,8 +12,8 @@
 				<li class="menu-brand">Brand</li>
 				<li class="menu-vazio"></li>
 				<li><a href="#" class="menu-home" title="HOME">HOME</a></li>
-				<li><a href="#" class="menu-about" title="ABOUT">ABOUT</a></li>
-				<li><a href="#" class="menu-contact" title="CONTACT">CONTACT</a></li>
+				<li><a href="#" class="menu-about" title="ABOUT">SOBRE</a></li>
+				<li><a href="#" class="menu-contact" title="CONTACT">CONTATO</a></li>
 			</ul>
 		</nav>
 	</header>
